TEST_PROGRAMS/INVALID/08/nestedBlockComment.go
package main;
/* 
this is a comment
/* this is a nested comment, so bad*/
*/
